-issue#5867: Disabling a Tree does not function as expected
-issue#5868: Error when remove Orphaned Graphs from GUI
-issue#5869: Fix FreeBSD IPv6 ping
-issue#5870: CLI utility splice_rrd.php generates an error in PHP8+
-issue#5874: IPV6 address colon format causes the snmp query to not work 
-issue#5884: Fix Fortigate and Aruba OSCX switch template, improve Clearpass template
-feature#5921: Add HPE Nimble/Alletra template
-issue#5932: When upgrading Cacti, the replicate_out() process runs repeatedly

1.2.28
-security#GHSA-49f2-hwx9-qffr: XSS vulnerability when creating external links with the consolenewsection parameter
-security#GHSA-fgc6-g8gc-wcg5: XSS vulnerability when creating external links with the title parameter
-security#GHSA-gxq4-mv8h-6qj4: RCE vulnerability can be executed via Log Poisoning
-security#GHSA-wh9c-v56x-v77c: XSS vulnerability when creating external links with the fileurl parameter
-issue#5636: When using LDAP authentication the first time, warnings may appear in logs
-issue#5754: When installing, a replication loop for plugin_realms may occur
-issue#5759: When installing, remote poller may attempt to sync with other pollers
-issue#5768: When a Data Query has a space, indexes may not be properly escaped
-issue#5771: Boost does not always order data source records properly
-issue#5772: Add IP address to the login audit for successful logins by xmacan
-issue#5773: Undefined variable error may sometimes occur when dealing with RRD output by MSS970
-issue#5777: When export to CSV, only the first line of notes is included
-issue#5780: When rendering forms, missing default value can cause errors
-issue#5782: Allow hosted content to be executable for the links page
-issue#5783: When closing database connections, some may linger incorrectly
-issue#5785: When changing passwords, an infinite loop may occur by ddb4github
-issue#5790: When using Cacti Daemon, a "Cron out of sync" message may be reported